# featbit

docker/composes/: docker-compose-eval-next-lb.yml  docker-compose-eval-next.yml
docker/composes/nginx/: nginx.conf
docker/composes/otel/: featbit-otel-config.yaml
modules/data-analytics/: gunicorn.conf.py  pyproject.toml  requirements.txt  start.bat  start.sh
modules/data-analytics-migrator/: .gitignore  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py
modules/data-analytics-migrator/app/: __init__.py  cli.py  commands.py  extensions.py  setting.py
modules/data-analytics-migrator/app/clickhouse/: client.py
modules/data-analytics-migrator/app/clickhouse/commands/: migrate.py
modules/data-analytics-migrator/app/clickhouse/kafka/: __init__.py  kafka_client.py
modules/data-analytics-migrator/app/clickhouse/models/: commons.py
modules/data-analytics-migrator/app/clickhouse/models/event/: __init__.py  sql.py
modules/data-analytics-migrator/app/mongodb/: db.py
modules/data-analytics-migrator/app/mongodb/commands/: migrate.py
modules/data-analytics-migrator/app/utils/: __init__.py
modules/data-analytics-migrator/deploy/: Dockerfile  Dockerfile-dev
modules/data-analytics-migrator/src/: .env  pyproject.toml
modules/data-analytics-migrator/src/app/: __init__.py  extensions.py
modules/data-analytics-migrator/src/utils/: __init__.py
modules/data-analytics/app/: __init__.py  extensions.py  main.py  setting.py
modules/data-analytics/app/api/: api.py
modules/data-analytics/app/api/endpoints/: events.py  experiments.py  health.py
modules/data-analytics/app/clickhouse/: client.py
modules/data-analytics/app/clickhouse/kafka/: kafka_client.py  kafka_enginer.py
modules/data-analytics/app/clickhouse/models/: commons.py
modules/data-analytics/app/clickhouse/models/event/: sql.py  util.py
modules/data-analytics/app/core/: config.py
modules/data-analytics/app/experimentation/models/experiment/: experiment_types.py  trends_experiment_result.py
modules/data-analytics/app/mainapp/: __init__.py  views.py
modules/data-analytics/app/mainapp/models/statistics/: __init__.py
modules/data-analytics/app/mainapp/models/statistics/end_user/: end_user_statistics.py
modules/data-analytics/app/mainapp/models/statistics/feature_flag/: feature_flag_statistics.py  sql.py
modules/data-analytics/app/mainapp/models/statistics/time_series/: __init__.py
modules/data-analytics/app/mongodb/: db.py
modules/data-analytics/app/mongodb/models/event/: util.py
modules/data-analytics/app/utils/: __init__.py
modules/evaluation-server-hub/: EvaluationServer-hub.sln
modules/evaluation-server-next/: EvaluationServer-hub.sln  FeatBit.EvaluationServer.sln  docker-compose.test.yml  start-edge.sh  start-hub.sh  start-web.sh
modules/evaluation-server-next/broker/: Featbit.EvaluationServer.Broker.sln
modules/evaluation-server-next/deploy/: Readme.md
modules/evaluation-server-next/docs/: migration-guide.md
modules/evaluation-server-next/edge/: Featbit.EvaluationServer.Edge.sln
modules/evaluation-server-next/hub/: FeatBit.EvaluationServer.Hub.sln
modules/evaluation-server-next/src/: Hub-Message-Correlation-Implementation.md  Message-Correlation-Guide.md  src.sln  (+2 more)
(+531 files in other folders)
